fixed error alert on order label page and alignment

--- a/frontend/src/styles/Global.css
+++ b/frontend/src/styles/Global.css
@@ -219,7 +219,7 @@ body {
   width: 100%;
   align-items: center;
   padding: 1rem;
-  margin: 0 auto 1.5rem;
+  margin-bottom: 1.5rem;
   max-width: 700px;
   border-radius: 0.25rem;
   -webkit-transition: all ease-in-out 0.3s;
