--- a/frontend/src/styles/OrderLabel.css
+++ b/frontend/src/styles/OrderLabel.css
@@ -1,3 +1,10 @@
+.orderLabelContainer .headingContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .orderLabelForm {
   display: flex;
   flex-direction: column;
